Setup GA workflow (#3)
* Configure cross compilation

* Generate GA workflows

* Fix arrow java compat, add scala code lint step

* Fix scalafix conf

* Fix running tests on java 8